Init spring-boot app